# hexagonal

./: .coveragerc  .dockerignore  Dockerfile  Makefile  alembic.ini  pyproject.toml  setup.cfg
app/: __main__.py  app.py
app/config/: app.py  store.py  types.py
bus/: bus.py
cli/: cli.py
domain/: users.py
local/: docker-compose.app.yaml  docker-compose.infra.yaml  env.example.sh
messages/: messages.py
migrations/: env.py
store/: __init__.py  adapter.py  redis.py  sql.py
store/tests/: test_redis.py  test_sql.py
