[tool.poetry]
name = "hexagonal"
version = "0.1.0"
description = ""
authors = ["ivm@crtweb.ru <iVMNMx3wN6EihVK>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.8.1"
aioredis = "^2.0.1"
asyncpg = "^0.26.0"
cli-ui = "^0.17.0"
flake8 = "^5.0.4"
flake8-isort = "^4.2.0"
Flask = "^2.2.2"
greenlet = "^1.1.2"
hypercorn = "^0.13.2"
isort = "^5.10.1"
psycopg2 = "^2.9.3"
pytest = "^7.1.2"
pyflakes = "^2.5.0"
pytest-asyncio = "^0.19.0"
pytest-cov = "^3.0.0"
requests = "^2.28.1"
testfixtures = "^7.0.0"
pycodestyle = "^2.9.1"
pydantic = "^1.9.2"
fastapi = "^0.79.0"
asgiref = "^3.5.2"
attrs = "^22.1.0"
atomicwrites = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

